Bug 448876 - Fix unread status of ignored threads. r=mkmelin

Previously, messages received in an ignored thread/subthread were marked as read before being
committed to the database. As a result, the thread's child unread count wasn't updated correctly.
Also, in IMAP folders, the messages themselves would reappear as unread because the necessary sync
wasn't performed. This should fix these issues.

Differential Revision: https://phabricator.services.mozilla.com/D198007

--HG--
extra : rebase_source : 359d54b4bda145cbd831b27473791bfda7fe48a3